# hotmint

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/hotmint/: Cargo.toml  README.md
crates/hotmint-abci/: Cargo.toml  README.md
crates/hotmint-abci-proto/: Cargo.toml  build.rs
crates/hotmint-abci-proto/src/: convert.rs  lib.rs
crates/hotmint-abci/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/hotmint-abci/tests/: e2e_ipc_test.rs  go_e2e_ipc_test.rs  go_ipc_test.rs  ipc_test.rs
crates/hotmint-api/: Cargo.toml  README.md
crates/hotmint-api/src/: rpc.rs  types.rs
crates/hotmint-api/tests/: rpc_test.rs
crates/hotmint-consensus/: Cargo.toml  README.md
crates/hotmint-consensus/benches/: consensus_bench.rs
crates/hotmint-consensus/src/: application.rs  commit.rs  engine.rs  error.rs  leader.rs  lib.rs  metrics.rs  network.rs  pacemaker.rs  state.rs  store.rs  sync.rs  view_protocol.rs  vote_collector.rs
crates/hotmint-consensus/tests/: e2e.rs  four_node.rs
crates/hotmint-crypto/: Cargo.toml  README.md
crates/hotmint-crypto/benches/: crypto_bench.rs
crates/hotmint-crypto/src/: aggregate.rs  hash.rs  lib.rs  signer.rs
crates/hotmint-evm/: Cargo.toml
crates/hotmint-evm/src/: app.rs  lib.rs  tx.rs
crates/hotmint-mempool/: Cargo.toml  README.md
crates/hotmint-mempool/src/: lib.rs
crates/hotmint-network/: Cargo.toml  README.md
crates/hotmint-network/src/: codec.rs  lib.rs  peer.rs  pex.rs  service.rs
crates/hotmint-staking/: Cargo.toml  README.md
crates/hotmint-staking/src/: lib.rs  manager.rs  rewards.rs  store.rs  types.rs
crates/hotmint-staking/tests/: staking_test.rs
crates/hotmint-storage/: Cargo.toml  README.md
crates/hotmint-storage/src/: block_store.rs  consensus_state.rs  lib.rs
crates/hotmint-types/: Cargo.toml  README.md
crates/hotmint-types/src/: block.rs  certificate.rs  context.rs  crypto.rs  epoch.rs  evidence.rs  lib.rs  message.rs  sync.rs  validator.rs  validator_update.rs  view.rs  vote.rs
crates/hotmint/src/: config.rs  lib.rs
docs/: README.md  application.md  architecture.md  benchmarks.md  consensus-engine.md  crypto.md  getting-started.md  mempool-api.md  metrics.md  networking.md  production-readiness.md  protocol.md  storage.md  types.md  wire-protocol.md
examples/bench-consensus/: Cargo.toml  README.md
examples/bench-consensus/src/: main.rs
examples/bench-ipc/: Cargo.toml  README.md
examples/bench-ipc/src/: main.rs
examples/cluster-node/: Cargo.toml
examples/cluster-node/src/: abci_server.rs  main.rs
examples/demo/: Cargo.toml  README.md
examples/demo/src/: main.rs
examples/evm-chain/: Cargo.toml  README.md
examples/evm-chain/src/: app.rs  bench.rs  evm_app.rs  evm_tx.rs  lib.rs  main.rs  tx.rs
examples/hotmint-evm/: Cargo.toml
examples/hotmint-evm/src/: app.rs  lib.rs  tx.rs
examples/hotmint-utxo/: Cargo.toml
examples/hotmint-utxo/src/: app.rs  lib.rs  state.rs  types.rs
examples/utxo-chain/: Cargo.toml  README.md
examples/utxo-chain/src/: app.rs  bench.rs  lib.rs  main.rs  utxo_app.rs  utxo_state.rs
hotmint-node/: Cargo.toml
hotmint-node/src/: main.rs
proto/: abci.proto
sdk/go/: abci.go  frame.go  go.mod  server.go  server_test.go
sdk/go/cmd/testserver/: main.go
sdk/go/proto/abci/: abci.pb.go
tools/hotmint-mgmt/: Cargo.toml
tools/hotmint-mgmt/src/: cluster.rs  local.rs  main.rs  remote.rs
