[workspace]
resolver = "2"
members = [
    "crates/hotmint",
    "crates/hotmint-types",
    "crates/hotmint-crypto",
    "crates/hotmint-consensus",
    "crates/hotmint-storage",
    "crates/hotmint-network",
    "crates/hotmint-mempool",
    "crates/hotmint-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/rust-util-collections/hotmint"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ruc = "9.3"
rmp-serde = "1"
blake3 = "1"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
# rand stays at 0.8 for ed25519-dalek 2.x compat (uses rand_core 0.6)
rand = "0.8"
vsdb = "9.1"
litep2p = "0.13"
futures = "0.3"
prometheus-client = "0.23"
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

hotmint-types = { path = "crates/hotmint-types" }
hotmint-crypto = { path = "crates/hotmint-crypto" }
hotmint-consensus = { path = "crates/hotmint-consensus" }
hotmint-storage = { path = "crates/hotmint-storage" }
hotmint-network = { path = "crates/hotmint-network" }
hotmint-mempool = { path = "crates/hotmint-mempool" }
hotmint-api = { path = "crates/hotmint-api" }
