[package]
name = "hotmint-node"
version = "0.1.0"
edition = "2024"

[dependencies]
hotmint-types = { workspace = true }
hotmint-crypto = { workspace = true }
hotmint-consensus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ruc = { workspace = true }
rand = { workspace = true }
