[package]
name = "hotmint-abci"
description = "IPC proxy layer (Application Binary Consensus Interface) for Hotmint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
hotmint-types = { workspace = true }
hotmint-consensus = { workspace = true }
hotmint-abci-proto = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ruc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
hotmint-crypto = { workspace = true }
