[package]
name = "hotmint-api"
description = "JSON-RPC API for external interaction with Hotmint nodes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hotmint-types = { workspace = true }
hotmint-mempool = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ruc = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
