[package]
name = "hotmint-consensus"
version = "0.1.0"
edition = "2024"

[dependencies]
hotmint-types = { workspace = true }
hotmint-crypto = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ruc = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
rand = { workspace = true }
