[package]
name = "hotmint-consensus"
description = "HotStuff-2 consensus state machine and engine for Hotmint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hotmint-types = { workspace = true }
hotmint-crypto = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ruc = { workspace = true }
prometheus-client = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "consensus_bench"
harness = false
