[package]
name = "hotmint-crypto"
description = "Cryptographic primitives for Hotmint: Ed25519, Blake3, aggregate signatures"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hotmint-types = { workspace = true }
serde = { workspace = true }
ruc = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "crypto_bench"
harness = false
