[package]
name = "hotmint-mempool"
description = "Transaction mempool with FIFO ordering and deduplication for Hotmint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
tracing = { workspace = true }
tokio = { workspace = true }
blake3 = { workspace = true }
