[package]
name = "hotmint-network"
description = "P2P networking layer for Hotmint using litep2p"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hotmint-types = { workspace = true }
hotmint-consensus = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ruc = { workspace = true }
litep2p = { workspace = true }
futures = { workspace = true }
