[package]
name = "hotmint-network"
description = "P2P networking layer for Hotmint using litep2p"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
hotmint-types = { workspace = true }
hotmint-consensus = { workspace = true }
serde = { workspace = true }
serde_cbor_2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ruc = { workspace = true }
litep2p = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
zstd = { workspace = true }
