[package]
name = "hotmint-staking"
description = "Staking toolkit for Hotmint BFT consensus — validator registration, delegation, slashing, rewards"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
hotmint-types = { workspace = true }
serde = { workspace = true }
ruc = { workspace = true }

[dev-dependencies]
serde_cbor_2 = { workspace = true }
