[package]
name = "hotmint-storage"
description = "Persistent storage backends for Hotmint (vsdb/rocksdb)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hotmint-types = { workspace = true }
hotmint-consensus = { workspace = true }
serde = { workspace = true }
ruc = { workspace = true }
tracing = { workspace = true }
vsdb = { workspace = true }
