[package]
name = "hotmint-types"
description = "Core data types for the Hotmint BFT consensus framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
ruc = { workspace = true }

[dev-dependencies]
rmp-serde = { workspace = true }
