[package]
name = "hotmint-types"
description = "Core data types for the Hotmint BFT consensus framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
serde = { workspace = true }
ruc = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
serde_cbor_2 = { workspace = true }
