[package]
name = "hotmint"
description = "A BFT consensus framework combining Tendermint's ergonomics with HotStuff-2's protocol efficiency"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
name = "hotmint"
path = "src/lib.rs"

[[bin]]
name = "hotmint-node"
path = "src/bin/node.rs"

[[bin]]
name = "hotmint-bench-e2e"
path = "src/bin/bench_e2e.rs"

[dependencies]
hotmint-types = { workspace = true }
hotmint-crypto = { workspace = true }
hotmint-consensus = { workspace = true }
hotmint-storage = { workspace = true }
hotmint-network = { workspace = true }
hotmint-mempool = { workspace = true }
hotmint-api = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ruc = { workspace = true }
rand = { workspace = true }
