[package]
name = "hotmint"
description = "A BFT consensus framework combining Tendermint's ergonomics with HotStuff-2's protocol efficiency"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
name = "hotmint"
path = "src/lib.rs"

[[bin]]
name = "hotmint-node"
path = "src/bin/node.rs"


[dependencies]
hotmint-types = { workspace = true }
hotmint-crypto = { workspace = true }
hotmint-consensus = { workspace = true }
hotmint-storage = { workspace = true }
hotmint-network = { workspace = true }
hotmint-mempool = { workspace = true }
hotmint-abci = { workspace = true }
hotmint-api = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ruc = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
litep2p = { workspace = true }
vsdb = { workspace = true }
