[package]
name = "hotmint-demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
hotmint = { path = "../../crates/hotmint" }
hotmint-types = { path = "../../crates/hotmint-types" }
hotmint-consensus = { path = "../../crates/hotmint-consensus" }
hotmint-crypto = { path = "../../crates/hotmint-crypto" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ruc = "9.3"
