[package]
name = "evm-chain-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
hotmint-types = { path = "../../crates/hotmint-types" }
hotmint-consensus = { path = "../../crates/hotmint-consensus" }
hotmint-crypto = { path = "../../crates/hotmint-crypto" }

revm = { version = "36", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_cbor_2 = "0.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ruc = "9.3"
