[package]
name = "evm-chain-example"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "evm_chain"
path = "src/lib.rs"

[[bin]]
name = "evm-chain-example"
path = "src/main.rs"

[[bin]]
name = "bench-evm"
path = "src/bench.rs"

[dependencies]
hotmint-types = { workspace = true }
hotmint-consensus = { workspace = true }
hotmint-crypto = { workspace = true }
revm = { workspace = true }
vsdb = { workspace = true }
serde = { workspace = true }
serde_cbor_2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ruc = { workspace = true }
