[package]
name = "hotmint-evm"
description = "EVM execution example/toolkit for building EVM-compatible chains on Hotmint (demo only, not for production)"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
hotmint-types = { workspace = true }
hotmint-consensus = { workspace = true }
serde = { workspace = true }
serde_cbor_2 = { workspace = true }
ruc = { workspace = true }
tracing = { workspace = true }
revm = { version = "36", default-features = false, features = ["std"] }
vsdb = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
