[package]
name = "hotmint-utxo"
description = "Production-grade UTXO runtime toolkit for building Bitcoin-style chains on Hotmint"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
hotmint-types = { workspace = true }
hotmint-consensus = { workspace = true }
serde = { workspace = true }
serde_cbor_2 = { workspace = true }
ruc = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
vsdb = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
