[package]
name = "utxo-chain-example"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "utxo_chain"
path = "src/lib.rs"

[[bin]]
name = "utxo-chain-example"
path = "src/main.rs"

[[bin]]
name = "bench-utxo"
path = "src/bench.rs"

[dependencies]
hotmint-types = { path = "../../crates/hotmint-types" }
hotmint-consensus = { path = "../../crates/hotmint-consensus" }
hotmint-crypto = { path = "../../crates/hotmint-crypto" }
ed25519-dalek = { version = "2.2", features = ["serde", "rand_core"] }
rand = "0.8"
vsdb = "10.1.3"
serde = { version = "1", features = ["derive"] }
serde_cbor_2 = "0.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ruc = "9.3"
blake3 = "1"
