[package]
name = "utxo-chain-example"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "utxo_chain"
path = "src/lib.rs"

[[bin]]
name = "utxo-chain-example"
path = "src/main.rs"

[[bin]]
name = "bench-utxo"
path = "src/bench.rs"

[dependencies]
hotmint-types = { workspace = true }
hotmint-consensus = { workspace = true }
hotmint-crypto = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
vsdb = { workspace = true }
serde = { workspace = true }
serde_cbor_2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ruc = { workspace = true }
blake3 = { workspace = true }
