[package]
name = "hotmint-mgmt"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hotmint-mgmt"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
ruc = { workspace = true }
